Source/WebCore/rendering/RenderLayer.cpp
@@ -489,7 +489,7 @@ void RenderLayer::removeChild(RenderLayer& oldChild)
     oldChild.setPreviousSibling(nullptr);
     oldChild.setNextSibling(nullptr);
     oldChild.m_parent = nullptr;
-    
+
     oldChild.updateDescendantDependentFlags();
     if (oldChild.m_hasVisibleContent || oldChild.m_hasVisibleDescendant)
         dirtyAncestorChainVisibleDescendantStatus();
@@ -645,7 +645,7 @@ bool RenderLayer::setIsNormalFlowOnly(bool isNormalFlowOnly)
 {
     if (isNormalFlowOnly == m_isNormalFlowOnly)
         return false;
-    
+
     m_isNormalFlowOnly = isNormalFlowOnly;
 
     if (auto* p = parent())
@@ -790,11 +790,11 @@ void RenderLayer::rebuildZOrderLists()
 {
     ASSERT(layerListMutationAllowed());
     ASSERT(isDirtyStackingContext());
-    
+
     OptionSet<Compositing> childDirtyFlags;
     rebuildZOrderLists(m_posZOrderList, m_negZOrderList, childDirtyFlags);
     m_zOrderListsDirty = false;
-    
+
     bool hasNegativeZOrderList = m_negZOrderList && m_negZOrderList->size();
     // Having negative z-order lists affect whether a compositing layer needs a foreground layer.
     // Ideally we'd only trigger this when having z-order children changes, but we blow away the old z-order
@@ -1020,7 +1020,7 @@ bool RenderLayer::paintsWithFilters() const
     return !m_backing->canCompositeFilters();
 }
 
-bool RenderLayer::requiresFullLayerImageForFilters() const 
+bool RenderLayer::requiresFullLayerImageForFilters() const
 {
     if (!paintsWithFilters())
         return false;
@@ -1159,8 +1159,21 @@ bool RenderLayer::ancestorLayerPositionStateChanged(OptionSet<UpdateLayerPositio
 
 #define LAYER_POSITIONS_ASSERT_ENABLED ASSERT_ENABLED || ENABLE(CONJECTURE_ASSERT)
 #if ASSERT_ENABLED
+#if ENABLE(TREE_DEBUGGING)
+#define LAYER_POSITIONS_ASSERT(assertion, ...) do { \
+    if (UNLIKELY(!(assertion))) \
+        showLayerPositionTree(root(), this); \
+    ASSERT(assertion, __VA_ARGS__); \
+} while (0)
+#define LAYER_POSITIONS_ASSERT_IMPLIES(condition, assertion) do { \
+    if (UNLIKELY(condition && !(assertion))) \
+        showLayerPositionTree(root(), this); \
+    ASSERT_IMPLIES(condition, assertion); \
+} while (0)
+#else
 #define LAYER_POSITIONS_ASSERT(assertion, ...) ASSERT(assertion, __VA_ARGS__)
 #define LAYER_POSITIONS_ASSERT_IMPLIES(condition, assertion) ASSERT_IMPLIES(condition, assertion)
+#endif // ENABLE(TREE_DEBUGGING)
 #elif ENABLE(CONJECTURE_ASSERT)
 #define LAYER_POSITIONS_ASSERT(assertion, ...) CONJECTURE_ASSERT(assertion, __VAR_ARGS__)
 #define LAYER_POSITIONS_ASSERT_IMPLIES(condition, assertion) CONJECTURE_ASSERT_IMPLIES(condition, assertion)
@@ -1261,17 +1274,14 @@ void RenderLayer::recursiveUpdateLayerPositions(OptionSet<UpdateLayerPositionsFl
     }
 
     auto repaintIfNecessary = [&](bool checkForRepaint) {
-        if (isVisibilityHiddenOrOpacityZero() || !isSelfPaintingLayer()) {
-            LAYER_POSITIONS_ASSERT_IMPLIES(mode == Verify, !repaintRects());
-            clearRepaintRects();
-            return;
-        }
-
         if (mode == Verify) {
             WeakPtr repaintContainer = renderer().containerForRepaint().renderer.get();
-            LAYER_POSITIONS_ASSERT(repaintRects());
-            LAYER_POSITIONS_ASSERT(m_repaintContainer == repaintContainer);
-            LAYER_POSITIONS_ASSERT(*repaintRects() == renderer().rectsForRepaintingAfterLayout(repaintContainer.get(), RepaintOutlineBounds::Yes));
+            LAYER_POSITIONS_ASSERT(repaintRects() || (isVisibilityHiddenOrOpacityZero() || !isSelfPaintingLayer()));
+            if (isVisibilityHiddenOrOpacityZero())
+                LAYER_POSITIONS_ASSERT(!m_repaintContainer);
+            else
+                LAYER_POSITIONS_ASSERT(m_repaintContainer == repaintContainer);
+            LAYER_POSITIONS_ASSERT_IMPLIES(repaintRects(), *repaintRects() == renderer().rectsForRepaintingAfterLayout(repaintContainer.get(), RepaintOutlineBounds::Yes));
             return;
         }
 
@@ -1463,7 +1473,10 @@ void RenderLayer::computeRepaintRects(const RenderLayerModelObject* repaintConta
     else
         setRepaintRects(renderer().rectsForRepaintingAfterLayout(repaintContainer, RepaintOutlineBounds::Yes));
 
-    m_repaintContainer = repaintContainer;
+    if (isVisibilityHiddenOrOpacityZero())
+        m_repaintContainer = nullptr;
+    else
+        m_repaintContainer = repaintContainer;
 }
 
 void RenderLayer::computeRepaintRectsIncludingDescendants()
@@ -6847,8 +6860,13 @@ static void outputLayerPositionTreeLegend(TextStream& stream)
     stream.nextLine();
 }
 
-void outputLayerPositionTreeRecursive(TextStream& stream, const WebCore::RenderLayer& layer, unsigned depth)
+void outputLayerPositionTreeRecursive(TextStream& stream, const WebCore::RenderLayer& layer, unsigned depth, const WebCore::RenderLayer* mark)
 {
+    if (&layer == mark)
+        stream << "*"_s;
+    else
+        stream << " "_s;
+
     stream << (layer.m_layerPositionDirtyBits.contains(WebCore::RenderLayer::LayerPositionUpdates::NeedsPositionUpdate) ? "U"_s : "-"_s);
     stream << (layer.m_layerPositionDirtyBits.contains(WebCore::RenderLayer::LayerPositionUpdates::DescendantNeedsPositionUpdate) ? "D"_s : "-"_s);
     stream << (layer.m_layerPositionDirtyBits.contains(WebCore::RenderLayer::LayerPositionUpdates::AllChildrenNeedPositionUpdate) ? "C"_s : "-"_s);
@@ -6903,15 +6921,15 @@ void outputLayerPositionTreeRecursive(TextStream& stream, const WebCore::RenderL
     stream.nextLine();
 
     for (WebCore::RenderLayer* child = layer.firstChild(); child; child = child->nextSibling())
-        outputLayerPositionTreeRecursive(stream, *child, depth + 1);
+        outputLayerPositionTreeRecursive(stream, *child, depth + 1, mark);
 }
 
-void showLayerPositionTree(const WebCore::RenderLayer* layer)
+void showLayerPositionTree(const WebCore::RenderLayer* root, const WebCore::RenderLayer* mark)
 {
     TextStream stream;
     outputLayerPositionTreeLegend(stream);
-    if (layer)
-        outputLayerPositionTreeRecursive(stream, *layer, 0);
+    if (root)
+        outputLayerPositionTreeRecursive(stream, *root, 0, mark);
 
     WTFLogAlways("%s", stream.release().utf8().data());
 }
